# CodeVault

./: .gitignore  CMakeLists.txt  CodeVault.sln  CodeVault.vcxproj  LICENSE  README.md  Readme.md  info.plist  main.c
CodeVault/: App.cpp  App.h  CMakeLists.txt  CVCustomControls.h  CVGradientPanel.h  CodeVault.vcxproj  CodeVault.vcxproj.filters  CodeVaultDataStructs.h  LoginFrame.cpp  MainFrame.cpp  MainFrame.h  MySQLConnectionManager.cpp  MySQLConnectionManager.h  SignUpFrame.cpp  SignUpFrame.h  loginFrame.h
CodeVault/Models/: CodeSnippetModel.h  LanguageModel.h  TagModel.h
CodeVault/Presenters/: BasePresenter.cpp  BasePresenter.h  PrimaryFramePresenter.cpp  PrimaryFramePresenter.h
CodeVault/ServiceLayer/: CodeSnippetRepository.cpp  CodeSnippetRepository.h  LanguageRepository.cpp  LanguageRepository.h  TagsRepository.cpp  TagsRepository.h
CodeVault/Utill/: DBUtill.h
